--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,39 @@
 services:
-  db:
-    image: postgres:16.3-alpine
-    restart: always
+  backend:
+    build: .
+    restart: unless-stopped
+    environment:
+      DB_HOST: postgres
+    ports:
+      - ${BACKEND_PORT}:8000
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - freebots_network
+
+  postgres:
+    image: postgres:17
+    restart: unless-stopped
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASS}
       POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - ${DB_PORT}:5432
     volumes:
-      - "/var/lib/postgresql/data:/data"
-  web:
-    build: .
-    restart: always
-    depends_on:
-      - db
-    env_file:
-      .env
-    environment:
-      DB_HOST: db
-    ports:
-      - "8000:8000"
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    networks:
+      - freebots_network
+
+volumes:
+  postgres_data:
+
+networks:
+  freebots_network:
