--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ authx==1.4.3
 bcrypt==4.3.0
 certifi==2025.7.14
 cffi==1.17.1
+cfgv==3.4.0
 click==8.2.1
 cryptography==45.0.5
+distlib==0.4.0
 dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.2.0
@@ -17,11 +19,13 @@ faker==37.4.2
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.4
+filelock==3.18.0
 greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
+identify==2.6.12
 idna==3.10
 iniconfig==2.1.0
 itsdangerous==2.2.0
@@ -30,9 +34,12 @@ mako==1.3.10
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 mdurl==0.1.2
+nodeenv==1.9.1
 packaging==25.0
 passlib==1.7.4
+platformdirs==4.3.8
 pluggy==1.6.0
+pre-commit==4.2.0
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
@@ -52,6 +59,7 @@ rich==14.0.0
 rich-toolkit==0.14.8
 rignore==0.6.2
 rsa==4.9.1
+ruff==0.12.4
 sentry-sdk==2.33.0
 shellingham==1.5.4
 six==1.17.0
@@ -65,5 +73,6 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 uvloop==0.21.0
+virtualenv==20.32.0
 watchfiles==1.1.0
 websockets==15.0.1
