--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-CLIENT_APP_URL=
+CLIENT_APP_URL=http://localhost:5173
 
-DB_HOST=
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASS=
-TEST_DB_NAME=
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=chatbot_builder
+DB_USER=postgres
+DB_PASS=postgres
+TEST_DB_NAME=test_chatbot_builder
 
-JWT_SECRET=
+JWT_SECRET=Rk9yQ2hhbGxlbmdlci1Vc2VzLU5ld3NlY3JldC1KVE1fM3g4MnlmV3lV
 
 # Docker-compose specified variables
 BACKEND_PORT=8000
