feat: added redis

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ DB_USER=postgres
 DB_PASS=postgres
 TEST_DB_NAME=test_chatbot_builder
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=password
+REDIS_USER=default
+REDIS_USER_PASSWORD=password
+
 JWT_SECRET=Rk9yQ2hhbGxlbmdlci1Vc2VzLU5ld3NlY3JldC1KVE1fM3g4MnlmV3lV
 
 # Docker-compose specified variables
