--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "passlib>=1.7.4",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
+    "redis>=7.1.0",
     "sqlalchemy>=2.0.41",
 ]
 
