fix: payments webhook is blocked by cors

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ AUTH_BOT_SECRET=aboba
 
 YOOKASSA_SHOP_ID=
 YOOKASSA_API_KEY=
+YOOKASSA_IPS=
 
 # Docker-compose specified variables
 BACKEND_PORT=8000
