--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "factory-boy>=3.3.3",
     "fastapi[standard]>=0.116.1",
     "greenlet>=3.2.3",
+    "loguru>=0.7.3",
     "passlib>=1.7.4",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
