--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ idna==3.11
 iniconfig==2.3.0
 itsdangerous==2.2.0
 jinja2==3.1.6
+loguru==0.7.3
 mako==1.3.10
 markdown-it-py==4.0.0
 markupsafe==3.0.3
