feat: added base ai code gen functional

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ JWT_SECRET=Rk9yQ2hhbGxlbmdlci1Vc2VzLU5ld3NlY3JldC1KVE1fM3g4MnlmV3lV
 
 AUTH_BOT_SECRET=aboba
 
+OPENAI_API_KEY=123
+
 YOOKASSA_SHOP_ID=
 YOOKASSA_API_KEY=
 YOOKASSA_IPS=
