--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "greenlet>=3.2.3",
     "loguru>=0.7.3",
+    "openai>=1.63.0",
     "passlib>=1.7.4",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
