--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ markupsafe==3.0.3
 mdurl==0.1.2
 netaddr==1.3.0
 nodeenv==1.10.0
+openai==1.63.0
 packaging==25.0
 passlib==1.7.4
 platformdirs==4.5.1
